--- a/templates/products/detail.html
+++ b/templates/products/detail.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-Todo
+<p>Title: {{ product.name }}</p>
+<p>Description: {{ product.description }}</p>
+<p>Price: {{ product.price }}</p>
+<img src="{{ product.image.url }}">
 {% endblock %}
