user create/reset/login/logout/change_password

--- a/templates/products/list.html
+++ b/templates/products/list.html
@@ -2,6 +2,6 @@
 
 {% block content %}
     {% for product in products %}
-        <p><a href="{% url 'detail' product.slug %}" >{{ product.name }}</p>
+        <p><a href="{% url 'product_detail' product.slug %}" >{{ product.name }}</p>
     {% endfor %}
 {% endblock %}
