--- a/templates/products/list.html
+++ b/templates/products/list.html
@@ -1,7 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="card-deck">
     {% for product in products %}
-        <p><a href="{% url 'product_detail' product.slug %}" >{{ product.name }}</p>
+        <div class="col-sm-3">
+            <div class="card" style="width: 16rem;">
+                <img class="card-img-top" src="{{ product.image.url }}" alt="Card image cap">
+                <div class="card-body">
+                <h5 class="card-title">{{ product.name }}</h5>
+                <ul class="card-text">
+                    <li>名稱： {{ product.name }}</li>
+                    <li>價錢： {{ product.price }}</li>
+                    <li>庫存： {{ product.stock }}</li>
+                </ul>
+                <a href="{% url 'product_detail' product.slug %}" class="btn btn-primary">查看</a>
+                </div>
+            </div>
+        </div>
     {% endfor %}
+    </div>
 {% endblock %}
