--- a/templates/products/create.html
+++ b/templates/products/create.html
@@ -3,7 +3,86 @@
 {% block content %}
 <form action="{% url 'product_create' %}" method="post" enctype='multipart/form-data'>
     {% csrf_token %}
-    {{ form.as_p }}
+    {% for field in form %}
+        {{ field.label_tag }}
+        {{ field }}
+        {% for error in field.errors %}
+            {{ error }}
+        {% endfor %}
+    {% endfor %}
+    <button type="submit">確認</button>
+</form>
+<form action="{% url 'product_create' %}" method="post" enctype='multipart/form-data'>
+    {% csrf_token %}
+
+    <div class="form-group row">
+        <label for="name" class="col-sm-2 col-form-label">商品名稱</label>
+        <div class="col-sm-10">
+            {{ form.name }}
+        </div>     
+    </div>
+    <div class="form-group row">
+        {% for error in form.name.errors %}
+        <div class="col-sm-10">
+            {{ error }}
+        </div>
+        {% endfor %}
+    </div>
+
+    <div class="form-group row">
+        <label for="description" class="col-sm-2 col-form-label">商品描述</label>
+        <div class="col-sm-10">
+            {{ form.description }}
+        </div>
+    </div>
+    <div class="form-group row">
+        {% for error in form.description.errors %}
+        <div class="col-sm-10">
+            {{ error }}
+        </div>
+        {% endfor %}
+    </div>
+
+    <div class="form-group row">
+        <label for="price" class="col-sm-2 col-form-label">商品價格</label>
+        <div class="col-sm-10">
+            {{ form.price }}
+        </div>
+    </div>
+    <div class="form-group row">
+        {% for error in form.price.errors %}
+        <div class="col-sm-10">
+            {{ error }}
+        </div>
+        {% endfor %}
+    </div>
+
+    <div class="form-group row">
+        <label for="stock" class="col-sm-2 col-form-label">商品庫存</label>
+        <div class="col-sm-10">
+            {{ form.stock }}
+        </div>
+    </div>
+    <div class="form-group row">
+        {% for error in form.stock.errors %}
+        <div class="col-sm-10">
+            {{ error }}
+        </div>
+        {% endfor %}
+    </div>
+
+    <div class="form-group row">
+        <label for="file" class="col-sm-2 col-form-label">圖片上傳</label>
+        {{ form.image }}
+    </div>
+    <div class="form-group row">
+        {% for error in form.image.errors %}
+        <div class="col-sm-10">
+            {{ error }}
+        </div>
+        {% endfor %}
+    </div>
+    {{ form.author }}
     <button type="submit">確認</button>
 </form>
 {% endblock %}
