--- a/templates/base.html
+++ b/templates/base.html
@@ -6,13 +6,50 @@
 </head>
 
 <body>
-{% if request.user.is_authenticated %}
-    使用者{{ request.user }}
-    <a href="{% url 'product_create' %}">新增商品</a>
-{% else %}
-    <a href="{% url 'login' %}">請登入</a>
-{% endif %}
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="{% url 'product_list' %}">首頁</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    使用者
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{% url 'login' %}">登入</a>
+                    <a class="dropdown-item" href="{% url 'logout' %}">登出</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{% url 'password_change' %}">修改密碼</a>
+                    <a class="dropdown-item" href="{% url 'password_reset' %}">忘記密碼</a>
+                    <a class="dropdown-item" href="{% url 'signup' %}">註冊</a>
+                </div>
+            </li>
+        </ul>
+        
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">搜尋</button>
+        </form>
+        
+        {% if request.user.is_authenticated %}
+            使用者{{ request.user }}
+            <a href="{% url 'product_create' %}">新增商品</a>
+        {% else %}
+            <a href="{% url 'login' %}">請登入</a>
+        {% endif %}
+
+    </div>
+</nav>
+
+
 {% block content %}{% endblock %}
+
+
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
