--- a/templates/base.html
+++ b/templates/base.html
@@ -30,18 +30,20 @@
                 </div>
             </li>
         </ul>
-        
+        <div class="navbar-nav">
+            {% if request.user.is_authenticated %}
+                使用者{{ request.user }}
+                <a href="{% url 'product_create' %}">新增商品</a>
+            {% else %}
+                <a href="{% url 'login' %}">請登入</a>
+            {% endif %}
+        </div>
         <form class="form-inline my-2 my-lg-0" action="{% url 'product_search' %}" method="get">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">搜尋</button>
         </form>
         
-        {% if request.user.is_authenticated %}
-            使用者{{ request.user }}
-            <a href="{% url 'product_create' %}">新增商品</a>
-        {% else %}
-            <a href="{% url 'login' %}">請登入</a>
-        {% endif %}
+
 
     </div>
 </nav>
