add product to cart, view order list and detail, change layout and selection in homepage

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,15 +29,25 @@
                     <a class="dropdown-item" href="{% url 'signup' %}">註冊</a>
                 </div>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'cart_detail' %}">購物車</a>
+            </li>
+            <li class="nav-item">
+                {% if request.user.is_authenticated %}
+                    <a class="nav-link" href="{% url 'order_list' %}">購物明細</a>
+                {% endif %}
+            </li>
+            <li class="nav-item">
+                {% if request.user.is_authenticated %}
+                    <a class="nav-link" href="{% url 'product_create' %}">+新增商品</a>
+                {% endif %}
+            </li>
         </ul>
-        <div class="navbar-nav">
-            {% if request.user.is_authenticated %}
-                使用者{{ request.user }}
-                <a href="{% url 'product_create' %}">新增商品</a>
-            {% else %}
-                <a href="{% url 'login' %}">請登入</a>
-            {% endif %}
-        </div>
+        {% if request.user.is_authenticated %}
+            <a class="nav-link">使用者{{ request.user }}</a>
+        {% else %}
+            <a class="nav-link" href="{% url 'login' %}">請登入</a>
+        {% endif %}        
         <form class="form-inline my-2 my-lg-0" action="{% url 'product_search' %}" method="get">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">搜尋</button>
