--- a/templates/orders/list.html
+++ b/templates/orders/list.html
@@ -1,6 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
+
+<h1>你的訂單紀錄</h1>
 {% for order in orders %}
-    <p><a href="{{ order.get_absolute_url }}">{{ order.id }}</a>{{ order.pub_date }}</p>
-{% endfor %}
+    <div class="card" style="width: 18rem;">
+        <div class="card-body">
+        <h5 class="card-title">訂單編號: {{ order.id }}</h5>
+        <h6 class="card-subtitle mb-2 text-muted">訂單日期: {{ order.pub_date }}</h6>
+        <a href="{{ order.get_absolute_url }}" class="card-link">查看</a>
+        </div>
+    </div>
+  {% endfor %}
 {% endblock %}
