--- a/templates/users/password_reset_email.html
+++ b/templates/users/password_reset_email.html
@@ -1,7 +1,5 @@
 使用者 {{user.username}} 重新設定 email {{ user.email }}
 請利用下面連結重新設定:
-<a href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}">
-    連結
-</a>
+"{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}"
 
 Shop團隊感謝你
